src/bindings.rs

extern "C" {
    pub fn jpeg_write_m_header();
}
extern "C" {
    pub fn jpeg_write_m_byte();
}
extern "C" {
    pub fn jpeg_write_tables();
}
extern "C" {
    pub fn jpeg_read_header() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jpeg_start_decompress() -> boolean;
}
extern "C" {
    pub fn jpeg_read_scanlines() -> JDIMENSION;
}
extern "C" {
    pub fn jpeg_finish_decompress() -> boolean;
}
extern "C" {
    pub fn jpeg_read_raw_data() -> JDIMENSION;
}
extern "C" {
    pub fn jpeg_has_multiple_scans() -> boolean;
}
extern "C" {
    pub fn jpeg_start_output() -> boolean;
}
extern "C" {
    pub fn jpeg_finish_output() -> boolean;
}
extern "C" {
    pub fn jpeg_input_complete() -> boolean;
}
extern "C" {
    pub fn jpeg_new_colormap();
}
extern "C" {
    pub fn jpeg_consume_input() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn jpeg_calc_output_dimensions();
}
extern "C" {
    pub fn jpeg_save_markers();
}
extern "C" {
    pub fn jpeg_set_marker_processor();
}
extern "C" {
    pub fn jpeg_read_coefficients() -> *mut jvirt_barray_ptr;
}
extern "C" {
    pub fn jpeg_write_coefficients();
}
extern "C" {
    pub fn jpeg_copy_critical_parameters();
}
extern "C" {
    pub fn jpeg_abort_compress();
}
extern "C" {
    pub fn jpeg_abort_decompress();
}
extern "C" {
    pub fn jpeg_abort();
}
extern "C" {
    pub fn jpeg_destroy();
}
extern "C" {
    pub fn jpeg_resync_to_restart() -> boolean;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_comp_master {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_c_main_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_c_prep_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_c_coef_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_marker_writer {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_color_converter {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_downsampler {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_forward_dct {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_entropy_encoder {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_decomp_master {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_d_main_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_d_coef_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_d_post_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_input_controller {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_marker_reader {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_entropy_decoder {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_inverse_dct {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_upsampler {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_color_deconverter {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct jpeg_color_quantizer {
    pub _address: u8,
}
